examples/type-errors/next-env.d.ts
/// <reference types="next" />
/// <reference types="next/image-types/global" />

// Hand-committed: this example is never built or served by Next (it exists
// only to fail tsc), so the `.next/types` import the other examples carry
// is deliberately omitted — no build output exists to import.
